--- a/Example/Podfile
+++ b/Example/Podfile
@@ -8,19 +8,19 @@ use_frameworks!
 
 workspace 'BKExample.xcworkspace'
 
-target 'BKExample-iOS' do
+target 'BKExample (iOS)' do
     xcodeproj 'BKExample.xcodeproj'
     pod 'SnapKit', '~> 4.0.0'
     pod 'CryptoSwift'
 end
 
-#target 'BKExample-tvOS' do
+#target 'BKExample (tvOS)' do
 #    xcodeproj 'BKExample.xcodeproj'
 #    pod 'SnapKit', '~> 4.0.0'
 #    pod 'CryptoSwift'
 #end
 
-#target 'BKExample-macOS' do
+#target 'BKExample (macOS)' do
 #    xcodeproj 'BKExample.xcodeproj'
 #    pod 'SnapKit', '~> 4.0.0'
 #    pod 'CryptoSwift'
