--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode8
+osx_image: xcode11.3
 branches:
   only:
     - master
@@ -7,6 +7,6 @@ env:
   - LC_CTYPE=en_US.UTF-8 LANG=en_US.UTF-8
 script:
   - set -o pipefail
-  - xcodebuild -project BluetoothKit.xcodeproj -scheme "BluetoothKit iOS" -sdk iphonesimulator
-    -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO
+  - xcodebuild -project BluetoothKit.xcodeproj -scheme "BluetoothKit iOS" -sdk iphonesimulator13.2
+    -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO
   - pod lib lint --quick
